  in v2c-to-v1 PDU translation.
- Fix to wrong exceptions used in pysnmp/entity modules.
- Fix to noauth/nopriv security module so that it would not crash SNMP
  engine if called accidentally.
- Fix to CommandResponder not to return out-of-range errorIndex along
  with genErr
- Fix to GETBULK CommandResponder to do a by-column MIB walk, not by-raw.
- Fix to getVarBindTable() API function logic.

Revision 4.1.14a
----------------

- Fix to maxSizeResponseScopedPDU calculation at USM security module: now
  more precise and robust against screwed values on input.
- Fix to MIB loading logic that used to load same-name modules at
  disticts search paths on each loadModules() call.
- Fix to AsynsockDispatcher.runDispatcher() to make use of optional
  non-default select() timeout value.
- AbstractTransportDispatcher now allows user application registering
  multiple timer callbacks each with dedicated call period.
- Asynsock mainloop default idle period reduced to 0.5 sec for better
  timer resolution.
- Fix to SNMPv1->SNMPv2c error status handling at proxy module. This
  defect may have caused an infinite loop on a multiple var-bind
  SNMPv1 GetNext operation.
- Fix to contextName processing at config.addV1System -- typo rendered
  passed contextName not committed into LCD.
- Fix to unknown ContextName exception handling at CommandResponder App.
- config.addVacmUser() now accepts an optional contextName what makes
  it usable for configuring multiple contextName-bound bases of Managed
  Objects to SnmpEngine.
- MP pending states cache management re-worked so that SNMP engine will
  now handle an unlimited number of pending request/responses.
- Fix to SNMP discovery procedure: include ContentName in SNMP discovery
  messaging.
- Many fixes to AES crypto code that makes it actually working.
- Fix to SNMPv2-SMI createUndo operations.
- Fix to INFORM sending error handling at oneliner.
- Fix to mismatched response PDU handling at CommandGenerator application.