@@ -22,7 +22,8 @@ if errorIndication:
 else:
     if errorStatus:
         print '%s at %s\n' % (
-            errorStatus.prettyPrint(), varBinds[int(errorIndex)-1]
+            errorStatus.prettyPrint(),
+            errorIndex and varBinds[int(errorIndex)-1] or '?'
             )
     else:
         for name, val in varBinds:
