@@ -29,6 +29,7 @@ Revision 4.1.15a
   with genErr
 - Fix to GETBULK CommandResponder to do a by-column MIB walk, not by-raw.
 - Fix to getVarBindTable() API function logic.
+- Fix to example Manager scripts to use errorIndex when available.
 
 Revision 4.1.14a
 ----------------
